[package]
name = "async-stream-llama-cpp-2"
version = "0.1.83"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-cpp-2 = { path = "../../llama-cpp-2", version = "0.1.69" }
hf-hub = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
encoding_rs = { workspace = true }
futures = "0.3.30"
async-stream = "0.3.5"
tokio = { version = "1.40.0", features = ["full"] }

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
native = ["llama-cpp-2/native"]
vulkan = ["llama-cpp-2/vulkan"]

[lints]
workspace = true
